tests/typing/fail/self_as_default_arg_fail.rb
class A
  def f(x=self)
    x.g
  end
  def A.g
  end
end

A.new.f
